Fixing CSS for image gallery in dark mode and in general.

--- a/less/image-gallery.less
+++ b/less/image-gallery.less
@@ -27,6 +27,13 @@
     button{
         border: none;
         background: transparent;
+
+    }
+
+    .thumb-nav-button {
+        .enable__is-dark-mode & img {
+            filter: invert(); 
+        }
     }
     
     .thumbnail-slider {
@@ -36,7 +43,6 @@
         margin-top: 10px;
         .thumbnails{
             display: flex;
-            overflow: hidden;
             transition: transform 0.5s ease-in-out;
             .thumbnail-button{
                 width: 60px;
@@ -44,6 +50,8 @@
                 cursor: pointer;
                 opacity: 0.6;
                 border-radius: 5px;
+                margin: 0 5px;
+                
                 img{
                     width: 100%;
                     height: 100%;
@@ -54,15 +62,27 @@
                 } 
                 &.active{
                     opacity: 1;
-                    border: .38px solid #2b2b2b;
+                    border: 1px solid #2b2b2b;
+
+                    .enable__is-dark-mode & {
+                        border-color: #fff;
+                    }
                 }
-                &:hover{
-                    opacity: 0.4;
-                    border: .1px solid #2b2b2b;
+                &:hover{ 
+                    opacity: 1;
+                    border: none;
+                    
+                    .enable__is-dark-mode & {
+                        border-color: #fff;
+                    }
                 }
                 &:focus-visible{
-                    margin: 3px;
-                    border: .1px solid #2b2b2b;
+                    opacity: 1;
+                    outline-offset: 2px;
+
+                    .enable__is-dark-mode & {
+                        border-color: #fff;
+                    }
                 }
             }
         }
